fix: advance endpoints virtual shop
